fix: overflow of mobile menu

--- a/client/src/Nav.css
+++ b/client/src/Nav.css
@@ -240,7 +240,7 @@ html {
     position: absolute;
     top: 80px; /* just below nav */
     left: 0;
-    width: 100vw;
+    width: 90vw;
     background-color: rgb(255, 255, 255, 0.85);
     display: flex;
     flex-direction: column;
